# hindley-milner-type-check

./: .gitignore  LICENSE  README.md  hindley-milner-type-check.cabal  stack.yaml
src/Type/Check/: HM.hs
src/Type/Check/HM/: Infer.hs  Lang.hs  Pretty.hs  Subst.hs  Term.hs  TyTerm.hs  Type.hs  TypeError.hs
test/: Main.hs
test/TM/: NumLang.hs  SKI.hs
